--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -4,6 +4,7 @@
   "description": "Locals Love It NUVention",
   "main": "app.jsx",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/nuvention-web/kaleberry#readme",
   "dependencies": {
+	  "express": "^4.12.3"
 
   },
   "devDependencies": {
