--- a/rails-api/Gemfile
+++ b/rails-api/Gemfile
@@ -7,7 +7,7 @@ gem 'rails-api'
 
 gem 'spring', :group => :development
 
-gem 'active_model_serializers'
+gem 'active_model_serializers', '~> 0.10.0.rc1'
 
 
 gem 'pg'
