--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/nuvention-web/kaleberry#readme",
   "dependencies": {
-	  "express": "^4.12.3"
-
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "express": "^4.12.3",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "watchify": "^3.7.0"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
