--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -24,6 +24,7 @@
     "express": "^4.12.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-router": "^2.0.0",
     "watchify": "^3.7.0"
   },
   "devDependencies": {}
