--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -27,5 +27,31 @@
     "react-router": "^2.0.0",
     "watchify": "^3.7.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "es6ify": "^1.6.0",
+    "gulp": "^3.9.1",
+    "gulp-util": "~3.0.7",
+    "gulp-ruby-sass": "~2.0.4",
+    "gulp-bower": "0.0.6",
+    "gulp-flatten": "0.0.4",
+    "gulp-filter": "^2.0.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-csso": "^0.2.9",
+    "gulp-changed": "^1.0.0",
+    "gulp-autoprefixer": "2.1.0",
+    "gulp-notify": "^2.1.0",
+    "browser-sync": "^1.9.0",
+    "browserify": "^8.1.0",
+    "jasmine-node": "^1.14.5",
+    "jasmine-react": "1.1.0",
+    "react": "^0.12.0",
+    "react-router": "^2.0.0",
+    "reactify": "^0.17.1",
+    "proxyquire": "^1.7.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^3.7.0",
+    "del": "^1.1.0",
+    "yargs": "^3.30.0"
+  }
 }
