Fixes routes to be dynamic

--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -49,11 +49,11 @@
     "gulp-imagemin": "latest",
     "gulp-notify": "^2.1.0",
     "gulp-uglify": "^1.0.1",
+		"gulp-minify-css": "latest",
     "jasmine-node": "^1.14.5",
     "jasmine-react": "1.1.0",
     "main-bower-files": "^2.5.0",
     "react": "^0.14.7",
-    "react-router": "^2.0.0",
     "reactify": "^0.17.1",
     "proxyquire": "^1.7.3",
     "vinyl-buffer": "^1.0.0",
