--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -24,7 +24,8 @@
     "react-router": "^2.0.0-rc4",
     "flux": "^2.0.0",
     "node-sass": "^3.0.0",
-    "object-assign": "^1.0.0"
+    "object-assign": "^1.0.0",
+    "superagent": "^0.21.0"
   },
   "engines": {
     "node": "5.0.0",
