--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -25,7 +25,8 @@
     "flux": "^2.0.0",
     "node-sass": "^3.0.0",
     "object-assign": "^1.0.0",
-    "superagent": "^0.21.0"
+    "superagent": "^0.21.0",
+		"alt": "^0.16.0"
   },
   "engines": {
     "node": "5.0.0",
