--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -26,7 +26,7 @@
     "node-sass": "^3.0.0",
     "object-assign": "^1.0.0",
     "superagent": "^0.21.0",
-		"alt": "^0.16.0"
+    "alt": "^0.16.0"
   },
   "engines": {
     "node": "5.0.0",
@@ -35,33 +35,35 @@
   "devDependencies": {
     "browser-sync": "^1.9.0",
     "browserify": "^8.1.0",
+    "classnames": "^2.2.3",
     "del": "^1.1.0",
     "es6ify": "^1.6.0",
     "gulp": "^3.9.1",
-    "gulp-cache": "~0.2.4",
-    "gulp-util": "latest",
-    "gulp-ruby-sass": "~2.0.4",
-    "gulp-bower": "0.0.6",
-    "gulp-flatten": "0.0.4",
-    "gulp-filter": "^2.0.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-csso": "^0.2.9",
-    "gulp-changed": "^1.0.0",
     "gulp-autoprefixer": "2.1.0",
+    "gulp-bower": "0.0.6",
+    "gulp-cache": "~0.2.4",
+    "gulp-changed": "^1.0.0",
+    "gulp-csso": "^0.2.9",
+    "gulp-filter": "^2.0.0",
+    "gulp-flatten": "0.0.4",
     "gulp-imagemin": "latest",
+    "gulp-minify-css": "latest",
     "gulp-notify": "^2.1.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-ruby-sass": "~2.0.4",
     "gulp-uglify": "^1.0.1",
-		"gulp-minify-css": "latest",
+    "gulp-util": "latest",
     "jasmine-node": "^1.14.5",
     "jasmine-react": "1.1.0",
     "main-bower-files": "^2.5.0",
+    "proxyquire": "^1.7.3",
     "react": "^0.14.7",
     "reactify": "^0.17.1",
-    "proxyquire": "^1.7.3",
+    "superagent-mock": "^1.10.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^3.7.0",
     "yargs": "^3.30.0",
-    "classnames": "^2.2.3"
+		"superagent-mock": "1.10.0"
   }
 }
