--- a/rails-api/Gemfile
+++ b/rails-api/Gemfile
@@ -32,7 +32,7 @@ gem 'oauth'
 
 # To use debugger
 # gem 'ruby-debug19', :require => 'ruby-debug'
-group :test, :development  do	
+group :test  do	
 	gem 'rspec-rails'
 	gem 'pry'
 	gem 'factory_girl_rails'
