--- a/config/database.yml
+++ b/config/database.yml
@@ -80,6 +80,8 @@ test:
 #
 production:
   <<: *default
-  database: LLI_api_production
-  username: LLI_api
-  password: <%= ENV['LLI_API_DATABASE_PASSWORD'] %>
+  database: LLI_db
+  username: LLI_prod
+  host: <%= ENV['DB_HOST']%>
+  url: <%= ENV['DB_URL'] %>
+  password: <%= ENV['LLI_DB_PASSWORD'] %>
