--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "test": "rake spec:all"
   },
+	"engines": {
+		"node": "4.0.0",
+		"npm": "2.8.3"
+	},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nuvention-web/locals-love-it-backend.git"
